lib_LTLIBRARIES = libSDL_8SVX.la
pkginclude_HEADERS = samples.h

libSDL_8SVX_la_SOURCES = samples.c
libSDL_8SVX_la_CFLAGS = $(LIBIFF_CFLAGS) $(LIB8SVX_CFLAGS) $(LIBRESAMPLE_CFLAGS) $(SDL_CFLAGS) 
libSDL_8SVX_la_LIBADD = $(LIBIFF_LIBS) $(LIB8SVX_LIBS) $(LIBRESAMPLE_LIBS) -lresample $(SDL_LIBS) -lSDL_mixer
