lib_LTLIBRARIES = libSDL_8SVX.la
pkginclude_HEADERS = samples.h

libSDL_8SVX_la_SOURCES = samples.c
libSDL_8SVX_la_CFLAGS = $(LIBIFF_CFLAGS) $(LIB8SVX_CFLAGS) $(LIBRESAMPLE_CFLAGS) $(SDL2_CFLAGS) $(SDL2_MIXER_CFLAGS)
libSDL_8SVX_la_LIBADD = $(LIBIFF_LIBS) $(LIB8SVX_LIBS) $(LIBRESAMPLE_LIBS) -lresample $(SDL2_LIBS) $(SDL2_MIXER_LIBS)
